--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^4.0.1",
     "react-snap": "^1.23.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "yarn": "^1.22.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
