--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "^4.0.1",
     "react-snap": "^1.23.0",
     "rimraf": "^3.0.2",
+    "styled-components": "^5.3.1",
     "yarn": "^1.22.11"
   },
   "devDependencies": {
