--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "^4.0.1",
     "react-snap": "^1.23.0",
     "rimraf": "^3.0.2",
+    "sass-loader": "^10.1.1",
     "styled-components": "^5.3.1",
     "yarn": "^1.22.11"
   },
@@ -48,6 +49,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "gh-pages": "^3.2.3",
+    "html-loader": "^3.0.1",
     "source-map-explorer": "^2.5.2"
   },
   "browserslist": {
